--- a/AopDemo/src/main/resources/application.properties
+++ b/AopDemo/src/main/resources/application.properties
@@ -5,8 +5,8 @@ logging.level.root=INFO
 
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/aop_demo?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=@Dmin2089!
+spring.datasource.username=
+spring.datasource.password=
 
 # Driver Class Name
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
